@@ -956,6 +956,8 @@ Release 0.19.0 - Unreleased
     HADOOP-4423. Keep block length when the block recovery is triggered by
     append.  (szetszwo)
 
+    HADOOP-4449. Fix dfsadmin usage. (Raghu Angadi via cdouglas)
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
